--- a/FuzzyChem/glucosense2/app/src/main/res/values/colors.xml
+++ b/FuzzyChem/glucosense2/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="renk">#616161</color>
     <color name="renk2">#7798B7</color>
     <color name="renk3">#ADADB3</color>
+    <color name="renk4">#D9E2E3</color>
 </resources>
