--- a/FuzzyChem/glucosense2/app/src/main/res/drawable-v24/white_gray_border.xml
+++ b/FuzzyChem/glucosense2/app/src/main/res/drawable-v24/white_gray_border.xml
@@ -13,7 +13,7 @@
             android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/gray"/>
+                android:color="@color/renk4"/>
             <solid
                 android:color="@color/white"/>
 
